# MixedReality-WebRTC

./: .gitignore  Microsoft.MixedReality.WebRTC.sln  track_objects_pr_message.md
docs/manual/: download.md  helloworld-unity-importwebrtc.md  migration-guide-2.0.md  migration-guide.md
docs/manual/android/: building-android.md
docs/manual/cs/: cs-peerconnection.md  cs-signaling.md  cs.md  helloworld-cs-connection-core3.md  helloworld-cs-connection-uwp.md  helloworld-cs-mediatracks-core3.md  helloworld-cs-mediatracks-uwp.md  helloworld-cs-peerconnection-uwp.md  helloworld-cs-setup-core3.md  helloworld-cs-setup-uwp.md  helloworld-cs-signaling-uwp.md
examples/TestAppUwp/: App.xaml.cs  MainPage.xaml.cs  TestAppUWP.csproj
libs/Microsoft.MixedReality.WebRTC/: AudioTransceiver.cs  ExternalVideoTrackSource.cs  Library.cs  LocalAudioTrack.cs  LocalVideoTrack.cs  Microsoft.MixedReality.WebRTC.csproj  PeerConnection.cs  RemoteAudioTrack.cs  RemoteVideoTrack.cs  Transceiver.cs  VideoTrackSource.cs  VideoTransceiver.cs
libs/Microsoft.MixedReality.WebRTC.Core/include/: Microsoft.MixedReality.WebRTC.h  data_channel.h  external_video_track_source.h  interop_api.h  local_video_track.h  mrs_errors.h  mrs_external_video_track_source.h  mrs_local_video_track.h  mrs_peer_connection.h  mrs_webrtc.h  peer_connection.h
libs/Microsoft.MixedReality.WebRTC.Core/src/: callback.h  global_factory.cpp  global_factory.h  mrs_errors.cpp  mrs_errors.h  peer_connection.cpp  peer_connection.h
libs/Microsoft.MixedReality.WebRTC.Core/test/: Microsoft.MixedReality.WebRTC.Core.Desktop.Tests.vcxproj  audio_track_tests.cpp  data_channel_tests.cpp  external_video_track_source_tests.cpp  memory_tests.cpp  pch.h  peer_connection_test_helpers.h  peer_connection_tests.cpp  sdp_utils_tests.cpp  video_track_tests.cpp
libs/Microsoft.MixedReality.WebRTC.Native/: CodeCoverage.runsettings  Microsoft.MixedReality.WebRTC.Native.Sources.nuspec
libs/Microsoft.MixedReality.WebRTC.Native.iOS/Microsoft.MixedReality.WebRTC.xcodeproj/: project.pbxproj
libs/Microsoft.MixedReality.WebRTC.Native.iOS/src/: Info.plist  mrwebrtc.h
libs/Microsoft.MixedReality.WebRTC.Native/android/app/src/main/cpp/: CMakeLists.txt
tests/Microsoft.MixedReality.WebRTC.Tests/: AudioTransceiverTests.cs  LocalVideoTrackTests.cs  OpenCloseAsync.cs  PeerConnectionTests.cs  SdpForceCodecs.cs  VideoEnum.cs  VideoTransceiverTests.cs
tests/TestNuGetIntegrationCpp/: TestNuGetIntegrationCpp.vcxproj  main.cpp
tools/sdp_parser/: index.html  masala-parser.min.js  styles.css
(+284 files in other folders)
